Se corrigen errores

--- a/TiendaCachimbasMoisesMiranda/src/main/resources/templates/agregar-cachimba.html
+++ b/TiendaCachimbasMoisesMiranda/src/main/resources/templates/agregar-cachimba.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="../static/style.css" th:href="@{/css/style.css}" type="text/css">
+  <link rel="stylesheet" href="../static/style.css" th:href="@{/style.css}" type="text/css">
 
 </head>
 
@@ -28,7 +28,7 @@
                 class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="agregar-cachimba.html" th:href="@{/nueva}">Cachimba</a></li>
-              <li><a href="agregar-marca.html" th:href="@{/nueva}">Marca</a></li>
+              <li><a href="agregar-marca.html" th:href="@{/nuevaMarca}">Marca</a></li>
             </ul>
           </li>
 
@@ -196,6 +196,17 @@
       </div>
     </div>
   </div>
+  
+  <!-- Footer -->
+
+	 
+	 <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+		© 2021 Copyright:
+		<a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+	  </div>
+	 
+	</footer>
+	<!-- Footer -->
 </body>
 
 </html>
