--- a/TiendaCachimbasMoisesMiranda/src/main/resources/templates/index.html
+++ b/TiendaCachimbasMoisesMiranda/src/main/resources/templates/index.html
@@ -106,7 +106,8 @@
 							<h4 class="card-title" th:text="${cachimba.precio}"> €</h4>
 							<a href="#" th:href="@{/borrar/{id}(id=${cachimba.id})}" class="btn btn-danger">Eliminar</a>
 
-							<a href="error404.html" class="btn btn-primary">Más Información</a>
+							<a href="#"
+							th:href="@{/cachimba/{id}(id=${cachimba.id})}" class="btn btn-primary">Más Información</a>
 
 						</div>
 						<br> <a th:href="@{/editarCachimba/{id}(id=${cachimba.id})}" class="btn btn-warning">Editar
