--- a/TiendaCachimbasMoisesMiranda/src/main/resources/templates/agregar-cachimba.html
+++ b/TiendaCachimbasMoisesMiranda/src/main/resources/templates/agregar-cachimba.html
@@ -44,7 +44,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <div class="col-sm-8">
-        <h1>Agregar Cachimba</h1>
+        <h1>Agregar / Editar  Cachimba</h1>
       </div>
     </div>
   </div>
