se realiza el plan de prueba y la descripción, además se termina el apatado más información

--- a/TiendaCachimbasMoisesMiranda/src/main/resources/templates/descripcion.html
+++ b/TiendaCachimbasMoisesMiranda/src/main/resources/templates/descripcion.html
@@ -44,7 +44,7 @@
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <div class="col-sm-8">
-        <h1>Agregar / Editar  Cachimba</h1>
+        <h1>Descripción de la cachimba</h1>
       </div>
     </div>
   </div>
@@ -69,30 +69,30 @@
 
 
                     <div class="col-sm-6">
-                      <p>Nombre</p>
+                      <p><strong>Nombre</strong></p>
                       <p class="cachimba-nombre" th:text=${cachimba.nombre}>Nombre</p>
                     </div>
 
                     <div class="col-sm-6">
-                      <p>Marca</p>
+                      <p><strong>Marca</strong></p>
                       <p class="cachimba-marca" th:text=${cachimba.marca.nombre}>Nombre de Marca</p>
                     </div>
                   </div>
 
                   <div class="row">
                     <div class="col-sm-4">
-                      <p>Color</p>
+                      <p><strong>Color</strong></p>
                       <p class="cachimba-color" th:text=${cachimba.color}>Color</p>
                     </div>
 
 
                     <div class="col-sm-4">
-                      <p>Altura (en centímetros)</p>
+                      <p><strong>Altura (en centímetros)</strong></p>
                       <p class="cachimba-altura" th:text=${cachimba.altura}>Altura</p>
                     </div>
 
                     <div class="col-sm-4">
-                      <p>Conexiones para manguera</p>
+                      <p><strong>Conexiones para manguera</strong></p>
                       <p class="cachimba-numConexManguera" th:text=${cachimba.numConexManguera}>Número de conexiones para manguera</p>
                     </div>
 
@@ -101,7 +101,7 @@
 
                   <div class="row ">
                     <div class="col-sm-12">
-                      <p>Material de Fabricación</p>
+                      <p><strong>Material de Fabricación</strong></p>
                       <p class="cachimba-matFabricacion" th:text=${cachimba.materialFabricacion}>Material de Fabricación</p>
                     </div>
                   </div>
@@ -110,8 +110,8 @@
                   <div class="row ">
 
                     <div class="col-sm-12">
-                      <span class="help-block text-muted small-font">URL imagen</span>
-                      <input type="url" class="form-control" id="imagen" placeholder="http://..." th:field="*{imagen}">
+                      <p><strong>Descripción de la cachimba</strong></p>
+                      <p class="cachimba-descripcion-cachimba" th:text=${cachimba.descripcion}>Descripción</p>
                     </div>
 
                   </div>
@@ -120,9 +120,8 @@
 
                   <div class="row ">
                     <div class="col-sm-12">
-                      <span class="help-block text-muted small-font">Descripción</span>
-                      <textarea name="descripcion" cols="73" rows="10" autofocus required
-                        th:field="*{descripcion}">Escriba la descripción del producto</textarea>
+                      <p><strong>Descripción de la marca</strong></p>
+                      <p class="cachimba-descripcion-marca" th:text=${cachimba.marca.descripcion}>Descripción</p>
                     </div>
                   </div>
 
@@ -153,29 +152,15 @@
                         </div>
 
                         <div class="col-sm-3">
-                          <span  class="help-block text-muted small-font"> Precio</span>
-                          <input id="precio" type="text" class="form-control" placeholder="€" th:field="*{precio}" />
+                          	<p><strong>Precio</strong></p>
+                      		<p class="cachimba-precio" th:text=${cachimba.precio}>Precio</p>
                         </div>
                       </div>
                       <br>
 
 
 
-                      <div class="row ">
-                        <div class="col-sm-6">
-                        </div>
-                        <div class="col-sm-3 pad-adjust ">
-                        
-                          <a class="btn btn-danger btn-block" th:href="@{/borrar/{id}(id=${cachimba.id})}" >Borrar</a>
-                          
-                        </div>
-
-                        <div class="col-sm-3 pad-adjust">
-                          <input type="submit" th:value="${cachimba.id} ? 'Editar' :'Agregar'"
-                            class="btn btn-success btn-block" />
-
-                        </div>
-                      </div>
+                      
 
                     </div>
                   </div>
