--- a/TiendaCachimbasMoisesMiranda/src/main/resources/templates/agregar-marca.html
+++ b/TiendaCachimbasMoisesMiranda/src/main/resources/templates/agregar-marca.html
@@ -66,7 +66,7 @@
             	<input type="hidden" th:field="*{id}" id="id" />
                 <div class="col-md-5">
                   <span class="help-block text-muted small-font" > Nombre</span>
-                  <input type="text" class="form-control" id="nombre" placeholder="Nombre de la marca"
+                  <input type="text" class="form-control" id="nombre" required placeholder="Nombre de la marca"
                   th:field="*{nombre}" />
                 </div>
             </div>
